--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="anatomica.css">
 </head>
 <body>
-    hello world!
+    <div>
+        <button>
+            <p>energy</p>
+            <p>0</p>
+        </button>
+    </div>
+    <div>
+        <button></button>
+        <button></button>
+        <button></button>
+    </div>
+    <script src="atomica.js"></script>
 </body>
 </html>
