--- a/index.html
+++ b/index.html
@@ -3,20 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atomica</title>
     <link rel="stylesheet" href="anatomica.css">
 </head>
 <body>
     <div>
-        <button>
+        <button id="nrg-btn">
             <p>energy</p>
-            <p>0</p>
+            <p id="nrg-amt">0</p>
         </button>
     </div>
     <div>
-        <button></button>
-        <button></button>
-        <button></button>
+        <button id="prt-btn">
+            <p></p>protons</p>
+            <p id="prt-amt">0</p>
+            <p>10 energy</p>
+        </button>
+        <button id="elc-btn">
+            <p>electrons</p>
+            <p id="elc-amt">0</p>
+            <p>100 energy</p>
+        </button>
+        <button id="net-btn">
+            <p>neutrons</p>
+            <p id="net-amt">0</p>
+            <p>1000 energy</p>
+        </button>
     </div>
     <script src="atomica.js"></script>
 </body>
