--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div>
         <button id="prt-btn">
-            <p></p>protons</p>
+            <p>protons</p>
             <p id="prt-amt">0</p>
             <p>10 energy</p>
         </button>
