--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <button id="nrg-btn">
+        <button id="nrg-btn" class="stageOne">
             <p>energy</p>
             <p id="nrg-amt">0</p>
         </button>
