--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             <p>1000 energy</p>
         </button>
     </div>
+    <div>
+        <button id="prt-buy-ten">buy 10</button>
+        <button id="elc-buy-ten">buy 10</button>
+        <button id="net-buy-ten">buy 10</button>
+    </div>
     <script src="atomica.js"></script>
 </body>
 </html>
