--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="anatomica.css">
 </head>
 <body>
+    <button id="save" class="saveLoad">save</button>
+    <button id="load" class="saveLoad">load</button>
+    <button id="wipe-save" class="saveLoad wipeSave">wipe save</button>
     <div>
         <button id="nrg-btn" class="stageOne">
             <p>energy</p>
