--- a/index.html
+++ b/index.html
@@ -11,32 +11,31 @@
     <button id="load" class="saveLoad">load</button>
     <button id="wipe-save" class="saveLoad wipeSave">wipe save</button>
     <div>
-        <button id="nrg-btn" class="stageOne">
-            <p>energy</p>
-            <p id="nrg-amt">0</p>
+        <button id="nrg-btn" class="stageOne nrgBtn"> energy
+            <p id="nrg-amt nrg-btn" class="stageOne">0</p>
         </button>
     </div>
     <div>
-        <button id="prt-btn">
+        <button id="prt-btn" class="proton buyingButton">
             <p>protons</p>
             <p id="prt-amt">0</p>
             <p>10 energy</p>
         </button>
-        <button id="elc-btn">
+        <button id="elc-btn" class="electron buyingButton">
             <p>electrons</p>
             <p id="elc-amt">0</p>
             <p>100 energy</p>
         </button>
-        <button id="net-btn">
+        <button id="net-btn" class="neutron buyingButton">
             <p>neutrons</p>
             <p id="net-amt">0</p>
             <p>1000 energy</p>
         </button>
     </div>
     <div>
-        <button id="prt-buy-ten">buy 10</button>
-        <button id="elc-buy-ten">buy 10</button>
-        <button id="net-buy-ten">buy 10</button>
+        <button id="prt-buy-ten" class="buyTen">buy 10</button>
+        <button id="elc-buy-ten" class="buyTen">buy 10</button>
+        <button id="net-buy-ten" class="buyTen">buy 10</button>
     </div>
     <script src="atomica.js"></script>
 </body>
