--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <button id="load" class="saveLoad">load</button>
     <button id="wipe-save" class="saveLoad wipeSave">wipe save</button>
     <div>
-        <button id="nrg-btn" class="stageOne nrgBtn"> energy
-            <p id="nrg-amt nrg-btn" class="stageOne">0</p>
+        <button id="nrg-btn" class="stageOne">
+            <p class="stageOne">energy</p>
+            <p id="nrg-amt" class="stageOne">0</p>
         </button>
     </div>
     <div>
