--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button id="wipe-save" class="saveLoad wipeSave">wipe save</button>
     <div>
         <button id="nrg-btn" class="stageOne">
-            <p class="stageOne">energy</p>
+            <p id="nrg-title" class="stageOne">energy</p>
             <p id="nrg-amt" class="stageOne">0</p>
         </button>
     </div>
